5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1834_1276.log
== SUBMITION (2019-07-02 15:08:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(a)):
	if b[j] == max[b]:
	j = j + 1
print(j)	  
-- EXECUTION TIME:
0.920778
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 9
    for i in range(size(a)):
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:08:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(a)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(a)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:08:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:11:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:12:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j]
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
	print(j)	  
-- ERROR:
File "XXXX", line 9
    for i in range(size(b)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:13:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j])
for i in range(size(b)):
	if b[j] == max(b):
	j = j + 1
	print(j)	  
-- ERROR:
File "XXXX", line 11
    j = j + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:13:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j])
for i in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:13:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j])
for i in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)	  
-- EXECUTION TIME:
1.11581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 7, in <module>
    for j in range(a):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:13:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for i in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j])
for i in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:13:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(a)):
	for j in range(a):
		b[j] = sum(a[:,j])
for i in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:14:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(a)):
	b[j] = sum(a[:,j])
for i in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:15:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(a)):
	b[j] = sum(a[:,j])
for j in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)	  
-- EXECUTION TIME:
1.0443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 7, in <module>
    b[j] = sum(a[:,j])
IndexError: index 7 is out of bounds for axis 1 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:17:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(a)):
	b[j] = sum(a[:,j])
for j in range(size(a)):
	if b[j] == max(a):
		j = j + 1
		print(j)	  
-- EXECUTION TIME:
1.05662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 7, in <module>
    b[j] = sum(a[:,j])
IndexError: index 7 is out of bounds for axis 1 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:18:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(a)):
	b[j] = sum(a[:,j])
for j in range(size(a)):
	if b[j] == max(a):
		j = j + 1
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:19:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(a)):
	b[j] = sum(a[:,j])
for j in range(size(a)):
	if b[j] == max(a):
		j = j + 1
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:19:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(b)):
	i[j] = sum(a[:,j])
for j in range(size(b)):
	if i[j] == max(b):
		j = j + 1
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:20:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(b)):
	b[j] = sum(a[:,j])
for j in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:20:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
y = shape(a)[1]
b = zeros(y, dtype=int)
for j in range(size(b)):
	b[j] = sum(a[:,j])
for j in range(size(b)):
	if b[j] == max(b):
		j = j + 1
		print(j)
-- EXECUTION TIME:
1.04133
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
